@@ -94,9 +94,7 @@ Recommends: gkbd-capplet,
             iio-sensor-proxy,
             unzip
 Breaks: gdm3 (<< 3.19.92),
-        gnome-session (<< 3.19),
-        gnome-tweak-tool (<< 3.20.1-2~),
-        gnome-calendar (<< 3.21.4)
+        gnome-session (<< 3.19)
 Conflicts: gnome-screensaver (<< 3.6)
 Provides: notification-daemon, polkit-1-auth-agent
 Description: graphical shell for the GNOME desktop
@@ -110,5 +108,7 @@ Description: graphical shell for the GNOME desktop
 Package: gnome-shell-common
 Architecture: all
 Depends: ${misc:Depends}
+Breaks: gnome-tweak-tool (<< 3.20.1-2~),
+        gnome-calendar (<< 3.21.4)
 Description: common files for the GNOME graphical shell
  This package contains translations and data files for the GNOME shell.
