@@ -2,6 +2,8 @@ gnome-shell (3.21.91-3) UNRELEASED; urgency=medium
 
   * Bump gnome-tweak-tool Breaks to << 3.20.1-2~ for the
     org.gnome.shell.calendar -> org.gnome.desktop.calendar schema key move.
+  * Move gnome-tweak-tool and gnome-calendar Breaks to gnome-shell-common
+    which is the package containing the schemas.
 
  -- Andreas Henriksson <andreas@fatal.se>  Thu, 01 Sep 2016 20:59:18 +0200
 
